# easylm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
.github/workflows/: publish.yaml  publish.yml  python-publish.yml  test.yaml
docs/tutorial/: model_config.md  training_config.md  tutorial.md
easylm/: __init__.py  config.py  data.py  nn.py  tokenizer.py  trainer.py  utils.py
easylm/data/: __init__.py  dataloader.py  dataset.py
easylm/model/: __init__.py  bert.py  gpt.py  llama.py  vision.py
src/: nn.py  trainer.py  utils.py
src/data/: __init__.py  dataset.py
src/langtrain/: __init__.py  config.py  nn.py  tokenizer.py  trainer.py  utils.py
src/langtrain/config/: __init__.py  _config.py  config.py
src/langtrain/data/: __init__.py  _base.py  _causal.py  _dataset.py  _masked.py  _vision.py  base.py  causal.py  dataloader.py  dataset.py  masked.py  vision.py
src/langtrain/model/: __init__.py  _bert.py  _gpt.py  _llama.py  _vit.py  bert.py  gpt.py  llama.py  modeling_utils.py  vit.py
src/langtrain/nn/: __init__.py  _nn.py  nn.py
src/langtrain/tokenizer/: __init__.py  _base.py  _sentencepiece.py  sentencepiece.py
src/langtrain/trainer/: __init__.py  _trainer.py  trainer.py  trainer_utils.py
src/langtrain/utils/: __init__.py  _utils.py
src/model/: bert.py  gpt.py  llama.py
tests/: test_dataset.py  test_import.py  test_tokenizer.py  test_trainer.py  test_version_match.py
tests/data/: file.txt
