[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langtrain"
version = "0.0.1"
description = "Easy Language Model Training Library"
readme = "README.md"
authors = [
    { name = "Sayed Shaun", email = "sayedshaun4@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.2",
    "sentencepiece==0.2.0",
    "torch",
    "torchvision",
    "pillow"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["NLP", "language model", "training", "langtrain"]
