[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "langtrain"
version = "0.0.4"
description = "Language Model Training Library"
readme = "README.md"
authors = [
    { name = "Sayed Shaun", email = "sayedshaun4@gmail.com" }
]
requires-python = ">=3.10"
    dependencies = [
        "numpy==2.2.5",
        "Pillow==11.2.1",
        "platformdirs==4.3.7",
        "pytest==8.3.5",
        "PyYAML==6.0.2",
        "sentencepiece==0.2.0",
        "tomli==2.2.1",
        "tqdm==4.67.1",
        "wandb==0.19.10"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["nlp", "cv", "language model", "model training", "langtrain"]

[tool.setuptools.packages.find]
where = ["src"]
